Fix alignment of separator in header breadcrumb

--- a/src/base.css
+++ b/src/base.css
@@ -94,7 +94,7 @@ body > nav {
   list-style: none;
 
   li {
-    display: inline;
+    display: inline-flex;
   }
 
   li:not(:last-child)::after {
